--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -1,19 +1,32 @@
-- name: Install Bicep build
-  run: |
-    curl -Lo bicepinstall
-    https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
-    chmod +x ./bicepinstall
-    sudo mv ./bicepinstall /usr/local/bin/bicep
-    bicep --help
+name: Build ARM Tempalte
 
-- name: Run Bicep build
-  run: |
-    bicep build deploy/main.bicep
-    ls -l deploy/*.json
-    
-- uses: EndBug/add-and-commit@v7.0.0
-  with:
-    author_name: github-actions
-    author_email: '41898282+github-actions[bot]@users.noreply.github.com'
-    message: Update Bicep-ARM template
-    add: deploy/main.json
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build:
+
+    runs-on: windows-latest
+
+    steps:
+
+      - name: Install Bicep build
+        run: |
+          curl -Lo bicepinstall
+          https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
+          chmod +x ./bicepinstall
+          sudo mv ./bicepinstall /usr/local/bin/bicep
+          bicep --help
+
+      - name: Run Bicep build
+        run: |
+          bicep build deploy/main.bicep
+          ls -l deploy/*.json
+          
+      - uses: EndBug/add-and-commit@v7.0.0
+        with:
+          author_name: github-actions
+          author_email: '41898282+github-actions[bot]@users.noreply.github.com'
+          message: Update Bicep-ARM template
+          add: deploy/main.json
