--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -13,8 +13,7 @@ jobs:
 
       - name: Install Bicep build
         run: |
-          curl -Lo bicepinstall
-          https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
+          curl -Lo bicepinstall https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
           chmod +x ./bicepinstall
           sudo mv ./bicepinstall /usr/local/bin/bicep
           bicep --help
