--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -20,12 +20,15 @@ jobs:
 
       - name: Run Bicep build
         run: |
-          bicep build deploy/main.bicep
-          ls -l deploy/*.json
+            echo "-------"
+            ls
+            echo "-------"
+          # bicep build deploy/main.bicep
+          # ls -l deploy/*.json
           
-      - uses: EndBug/add-and-commit@v7.0.0
-        with:
-          author_name: github-actions
-          author_email: '41898282+github-actions[bot]@users.noreply.github.com'
-          message: Update Bicep-ARM template
-          add: deploy/main.json
+      # - uses: EndBug/add-and-commit@v7.0.0
+      #   with:
+      #     author_name: github-actions
+      #     author_email: '41898282+github-actions[bot]@users.noreply.github.com'
+      #     message: Update Bicep-ARM template
+      #     add: deploy/main.json
