--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Run Bicep build
         run: |
             echo "-------"
-            ls
+            pwd
+            ls deploy
             echo "-------"
           # bicep build deploy/main.bicep
           # ls -l deploy/*.json
