--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
             echo "-------"
             pwd
-            ls deploy
+            ls ./deploy/
             echo "-------"
           # bicep build deploy/main.bicep
           # ls -l deploy/*.json
