--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
             echo "-------"
             pwd
+            cd ../
+            pwd
             ls
             echo "-------"
           # bicep build deploy/main.bicep
