--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -30,7 +30,7 @@ jobs:
             # cd master
             # ls
             # echo "-------"
-            bicep build deploy/main.bicep
+            bicep build master/deploy/main.bicep
             ls -l deploy/*.json
           
       # - uses: EndBug/add-and-commit@v7.0.0
