--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -3,12 +3,14 @@ name: Build ARM Tempalte
 on:
   push:
     branches: [ master ]
+    paths:
+      - "deploy"
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
 
       - name: Checkout
