--- a/.github/workflows/bicep-build.yml
+++ b/.github/workflows/bicep-build.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Bicep build
         run: |
-            bicep build master/deploy/main.bicep
+            bicep build master/deploy/automation-only.bicep
             ls -l master/deploy/*.json
 
       - name: Commit files
