Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ variables:
 - name: resource-group
   value: tue-100-automation-central
 - name: automation-account
-  value: tue-100-automation-central
+  value: agtmhyhhww5tw
 - name: location
   value: eastus
 - name: config-location
