--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,18 +37,18 @@ steps:
     arguments: 'install --global azuresigntool'
   displayName: Install AzureSignTool
 
-
-
-# - task: CmdLine@2
-#   displayName: 'Sign outputted .exe with global AzureSignTool'
-#   inputs:
-#     script: AzureSignTool sign -kvu "$(- task: PowerShell@2
+- task: PowerShell@2
   inputs:
     targetType: 'inline'
     script: |
       write-output "---------"
       write-output $env:SigningVaultURL
-      write-output "---------")" -kvi "$(SigningClientId)" -kvs "$(SigningClientSecret)" --azure-key-vault-tenant-id "$(SigningTenantId)" -kvc 'dsc-poc' -v $(config-location)
+      write-output "---------"
+
+# - task: CmdLine@2
+#   displayName: 'Sign outputted .exe with global AzureSignTool'
+#   inputs:
+#     script: AzureSignTool sign -kvu "$(SigningVaultURL)" -kvi "$(SigningClientId)" -kvs "$(SigningClientSecret)" --azure-key-vault-tenant-id "$(SigningTenantId)" -kvc 'dsc-poc' -v $(config-location)
 
 # - task: AzurePowerShell@5
 #   inputs:
