Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,9 @@ steps:
     script: |
       write-output "---------"
       write-output "$(SigningVaultURL)"
+      write-output "$(SigningClientId)"
+      write-output "$(SigningClientSecret)"
+      write-output "$(SigningTenantId)"
       write-output "---------"
 
 # - task: CmdLine@2
