Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,7 @@ steps:
       write-output "$(SigningClientId)"
       write-output "$(SigningClientSecret)"
       write-output "$(SigningTenantId)"
+      write-output "$(ferfe)"
       write-output "---------"
 
 # - task: CmdLine@2
