--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,22 +37,10 @@ steps:
     arguments: 'install --global azuresigntool'
   displayName: Install AzureSignTool
 
-- task: PowerShell@2
+- task: CmdLine@2
+  displayName: 'Sign outputted .exe with global AzureSignTool'
   inputs:
-    targetType: 'inline'
-    script: |
-      write-output "---------"
-      write-output "$(SigningVaultURL)"
-      write-output "$(SigningClientId)"
-      write-output "$(SigningClientSecret)"
-      write-output "$(SigningTenantId)"
-      write-output "$(ferfe)"
-      write-output "---------"
-
-# - task: CmdLine@2
-#   displayName: 'Sign outputted .exe with global AzureSignTool'
-#   inputs:
-#     script: AzureSignTool sign -kvu "$(SigningVaultURL)" -kvi "$(SigningClientId)" -kvs "$(SigningClientSecret)" --azure-key-vault-tenant-id "$(SigningTenantId)" -kvc 'dsc-poc' -v $(config-location)
+    script: AzureSignTool sign -kvu "$(SigningVaultURL)" -kvi "$(SigningClientId)" -kvs "$(SigningClientSecret)" --azure-key-vault-tenant-id "$(SigningTenantId)" -kvc 'dsc-poc' -v $(config-location)
 
 # - task: AzurePowerShell@5
 #   inputs:
