Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   value: iis
 - name: config-location
   value: config/iis.ps1
-- group: singing-certificates
+- group: signing-certificates
 
 trigger:
   branches:
