--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,41 @@ steps:
       $store.Add($pfxcert)
       $store.Close()
 
+- task: PowerShell@2
+  displayName: "Sign PowerShell scripts"
+  inputs:
+    targetType: 'inline'
+    script: |
+      $magicToken = "#PerformScriptSigning"
+      $encoding = "UTF8"
+      $scriptFolder = "./config/"
+      $scripts = Get-ChildItem -Path $scriptFolder -Filter "*.ps1" -Recurse -ErrorAction Stop
+      foreach ($script in $scripts) {
+          try {
+              # $content = Get-Content -Path $script.FullName -Encoding $encoding
+              # if ($content.Contains($magicToken)) {
+                  # $content = $content | Where-Object {$_ -notmatch $magicToken}
+                  # Set-Content -Value $content -Path $script.FullName -Encoding $encoding -Force
+                  # load cert
+                  $codeSigningCert = Get-ChildItem Cert:\CurrentUser\My -CodeSigningCert | Select-Object -First 1
+                  Write-Output "Signing script `"$($script.Name)`" with certificate `"$($codeSigningCert.Thumbprint)`""
+                  # sign script
+                  $null = Set-AuthenticodeSignature -Certificate $codeSigningCert -FilePath $script.FullName -TimestampServer "http://timestamp.comodoca.com/rfc3161"
+                  # copy to artifact staging location
+                  $null = Copy-Item -Path $script.FullName -Destination $env:Build_ArtifactStagingDirectory
+              }
+          }
+          catch {
+              Write-Error $_
+          }
+      }
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'SignedScripts'
+    publishLocation: 'Container'
+
 # - task: AzurePowerShell@5
 #   inputs:
 #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
