--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,7 +123,7 @@ stages:
         ScriptType: 'InlineScript'
         azurePowerShellVersion: 'LatestVersion'
         Inline: |
-          $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
-          Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -Parameters $Params -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
+          # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
+          Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
       displayName: Compile Configuration
     
