Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,24 +22,24 @@ trigger:
 
 stages:
 
-- stage: test
-  dependsOn: []
+# - stage: test
+#   dependsOn: []
   
-  jobs:
-  - job: tests
-    pool:
-      vmImage: windows-2019
-    continueOnError: false
-    timeoutInMinutes: 20
+#   jobs:
+#   - job: tests
+#     pool:
+#       vmImage: windows-2019
+#     continueOnError: false
+#     timeoutInMinutes: 20
 
-    steps:
+#     steps:
 
-    - task: PowerShell@2
-      displayName: Install Pester
-      inputs:
-        targetType: 'inline'
-        script: |
-          Find-Module pester | Install-Module -Force
+#     - task: PowerShell@2
+#       displayName: Install Pester
+#       inputs:
+#         targetType: 'inline'
+#         script: |
+#           Find-Module pester | Install-Module -Force
 
 - stage: build
   dependsOn: test
@@ -110,22 +110,27 @@ stages:
 
     steps:
 
-    - task: AzurePowerShell@5
+    - task: Bash@3
       inputs:
-        azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
-        ScriptType: 'InlineScript'
-        # Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(config-location) -Force -Published'
-        Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(Build.ArtifactStagingDirectory)/iis.ps1 -Force -Published'
-        azurePowerShellVersion: 'LatestVersion'
-      displayName: Import Configuration
+        targetType: 'inline'
+        script: 'ls $(Build.ArtifactStagingDirectory)'
 
-    - task: AzurePowerShell@5
-      inputs:
-        azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
-        ScriptType: 'InlineScript'
-        azurePowerShellVersion: 'LatestVersion'
-        Inline: |
-          # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
-          Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
-      displayName: Compile Configuration
+    # - task: AzurePowerShell@5
+    #   inputs:
+    #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
+    #     ScriptType: 'InlineScript'
+    #     # Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(config-location) -Force -Published'
+    #     Inline: 'Import-AzAutomationDscConfiguration -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group) -SourcePath $(Build.ArtifactStagingDirectory)/iis.ps1 -Force -Published'
+    #     azurePowerShellVersion: 'LatestVersion'
+    #   displayName: Import Configuration
+
+    # - task: AzurePowerShell@5
+    #   inputs:
+    #     azureSubscription: 'ca-nepeters-demo-test(3762d87c-ddb8-425f-b2fc-29e5e859edaf)'
+    #     ScriptType: 'InlineScript'
+    #     azurePowerShellVersion: 'LatestVersion'
+    #     Inline: |
+    #       # $Params = @{"DomainName"="contoso.com";"DNSAddress"="10.0.2.4"}
+    #       Start-AzAutomationDscCompilationJob -ConfigurationName $(config-name) -AutomationAccountName $(automation-account) -ResourceGroupName $(resource-group)
+    #   displayName: Compile Configuration
     
